apps/idm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idm-app
  labels:
    app.kubernetes.io/name: idm-app
spec:
  selector:
    app.kubernetes.io/name: idm-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
