apps/idm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idm-app
  labels:
    app.kubernetes.io/name: idm-app
spec:
  ingressClassName: nginx
  rules:
    - host: idm.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idm-app
                port:
                  name: http
